<resources>
    <string name="app_name">Assignment 05</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_name">Item Name</string>
    <string name="qty_1">Qty: 1</string>
    <string name="size_default">Size: Default</string>
    <string name="item">Item</string>
    <string name="shopping_item">Shopping Item</string>
    <string name="details">Details</string>
    <string name="quantity">Quantity</string>
    <string name="_0">0</string>
    <string name="size">Size</string>
    <string name="noddles">Noddles</string>
    <string name="detail">Detail</string>
    <string name="bbq_flavour">BBQ Flavour</string>
    <string name="quantity_display">Quantity:</string>
    <string name="_2">2</string>
    <string name="size_display">Size:</string>
    <string name="medium">Medium</string>
    <string name="urgent">Urgent:</string>
</resources>