<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/textViewdisplayitemhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shopping_item"
        android:textColor="@color/DarkGreen"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:textStyle="bold"
        android:textSize="17dp"/>

    <TextView
        android:id="@+id/textViewdisplayitem"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:text="@string/noddles"
        android:paddingLeft="5dp"
        android:paddingVertical="4dp"
        app:layout_constraintTop_toBottomOf="@id/textViewdisplayitemhead"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/DarkGreen"
        android:background="@drawable/displayborder"
        android:textSize="17dp"/>

    <TextView
        android:id="@+id/textViewdisplaydetailhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail"
        app:layout_constraintTop_toBottomOf="@id/textViewdisplayitem"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/DarkGreen"
        android:textStyle="bold"
        android:textSize="17dp"/>

    <TextView
        android:id="@+id/textViewdisplaydetail"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:text="@string/bbq_flavour"
        app:layout_constraintTop_toBottomOf="@id/textViewdisplaydetailhead"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="15dp"
        android:textColor="@color/DarkGreen"
        android:textSize="17dp"
        android:background="@drawable/displayborder"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/textViewdisplayqtyhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity_display"
        app:layout_constraintTop_toBottomOf="@id/textViewdisplaydetail"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="15dp"
        android:textStyle="bold"
        android:textColor="@color/DarkGreen"
        android:textSize="17dp"
        />

    <TextView
        android:id="@+id/textViewdisplayqty"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:text="@string/_2"
        app:layout_constraintTop_toBottomOf="@id/textViewdisplaydetail"
        app:layout_constraintLeft_toRightOf="@id/textViewdisplayqtyhead"
        android:textSize="17dp"
        android:textColor="@color/DarkGreen"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="4dp"
        android:background="@drawable/displayborder"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        />

    <TextView
        android:id="@+id/textViewdisplaysizehead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size_display"
        app:layout_constraintTop_toBottomOf="@id/textViewdisplaydetail"
        app:layout_constraintLeft_toRightOf="@id/textViewdisplayqty"
        android:layout_marginLeft= "25dp"
        android:layout_marginTop="18dp"
        android:textSize="17dp"
        android:textColor="@color/DarkGreen"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewdisplaysize"
        android:layout_width="118dp"
        android:layout_height="30dp"
        android:text="@string/medium"
        app:layout_constraintLeft_toRightOf="@id/textViewdisplaysizehead"
        app:layout_constraintTop_toBottomOf="@id/textViewdisplaydetail"
        android:textSize="17dp"
        android:textColor="@color/DarkGreen"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="4dp"
        android:background="@drawable/displayborder"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"/>

    <TextView
        android:id="@+id/textViewdisplayurgent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/urgent"
        app:layout_constraintTop_toBottomOf="@id/textViewdisplayqtyhead"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:textSize="17dp"
        android:textColor="@color/DarkGreen"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/imageViewdisplayurg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/checked"
        app:layout_constraintTop_toBottomOf="@id/textViewdisplayqtyhead"
        app:layout_constraintLeft_toRightOf="@id/textViewdisplayurgent"
        android:layout_marginTop="27dp"
        android:layout_marginLeft="5dp"/>

    <ImageView
        android:id="@+id/imageViewEditbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/edit_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="5dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>