<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageViewUrgent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/urgent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/textViewitemname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/imageViewUrgent"
        android:layout_marginTop="10dp"
        android:textColor="@color/DarkGreen"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/textViewqty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qty_1"
        app:layout_constraintTop_toBottomOf="@id/textViewitemname"
        app:layout_constraintLeft_toRightOf="@id/imageViewUrgent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/DarkGreen"/>

    <TextView
        android:id="@+id/textViewsize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size_default"
        app:layout_constraintTop_toBottomOf="@id/textViewitemname"
        app:layout_constraintLeft_toRightOf="@id/textViewqty"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="50dp"
        android:textColor="@color/DarkGreen"/>

    <Switch
        android:id="@+id/switchbought"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bought"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/DarkGreen"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/textViewsize"
        android:layout_marginTop="7dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>